# clay

./: .gitignore  Cargo.toml  README.md  app.config.ts  clay-config.json  package.json  pnpm-lock.yaml  tailwind.config.js
.cargo/: config.toml
.github/workflows/: cargo.yml  rustc.yml
src/: actions.rs  app.rs  app.tsx  commit.rs  config.rs  diff.rs  entry-client.tsx  entry-server.tsx  history.rs  lint.rs  llm.rs  main.rs  project.rs  shell.rs  terminal.rs  tui.rs  ui.rs  version.rs
