[package]
name = "clay-cli"
version = "1.0.0"
edition = "2024"

[[bin]]
name = "clay"
path = "src/main.rs"

[dependencies]
ansi-to-tui = "7"
anyhow = "1"
bitflags = "2.9"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
directories = "6"
portable-pty = "0.9"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strip-ansi-escapes = "0.2"
strum = "0.27"
strum_macros = "0.27"
toml = "0.9"
vte = { version = "0.15", features = ["ansi"] }
walkdir = "2.5"
