[package]
name = "clay-cli"
version = "1.1.11"
edition = "2024"
authors = ["Canmi(Canmi21) <canmicn@gmail.com>"]
description = "An AI-powered developer assistant and TUI to streamline your git and project workflows."
license = "MIT"
repository = "https://github.com/canmi21/clay"
homepage = "https://github.com/canmi21/clay"
readme = "README.md"
keywords = ["cli", "tui", "dev-tool", "git", "ai"]
categories = ["command-line-utilities"]

[[bin]]
name = "clay"
path = "src/main.rs"

[dependencies]
ansi-to-tui = "7"
anyhow = "1"
bitflags = "2"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
directories = "6"
openssl = { version = "0.10", optional = true, features = ["vendored"] }
portable-pty = "0.9"
ratatui = "0.29"
reqwest = { version = "0.12", features = ["blocking", "json"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strip-ansi-escapes = "0.2"
strum = "0.27"
strum_macros = "0.27"
tokio = { version = "1", features = ["full"] }
vte = { version = "0.15", features = ["ansi"] }
walkdir = "2.5"

[features]
default = []
musl-vendored = ["dep:openssl"]